# SoftwareEngineeringProject2025

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  PROJECT_PLAN.md  README.md  README_old.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/preprocessor_mock-data/: dataframe_generator.py  tokenized_parsed.csv
data/project_CSVs/: books_mock_data.csv  placeholder.txt
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
src/config/: setup_nltk.py
src/project_recommender/: __init__.py  __main__.py  cli.py  extractor.py  extractor_test.py  loader.py  parsed.csv  pdf_loader.py  pdf_loader_plumber.py  preprocessor.py  recommender.py  words.txt
src/project_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_extractor.py  test_loader.py  test_pdf_loader_plumber.py  test_preprocessor.py  test_recommender.py
