[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-recommender"
version = "0.0.1"
description = "TF-IDF project recommender with NLP"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Thomas Shaw" },
  { name = "Oliver Staples" },
  { name = "Vaideha Sathe" }
]

dependencies = [
  "click>=8.3.0,<9.0",
  "colorama>=0.4.6,<0.5",
  "iniconfig>=2.3.0,<3.0",
  "joblib>=1.5.2,<2.0",
  "nltk>=3.9.2,<4.0",
  "numpy>=2.3.4,<3.0",
  "packaging>=25.0,<26.0",
  "pandas>=2.3.3,<3.0",
  "pdfplumber>=0.11.7,<0.12",
  "pluggy>=1.6.0,<2.0",
  "Pygments>=2.19.2,<3.0",
  "pytest>=8.4.2,<9.0",
  "python-dateutil>=2.9.0.post0,<3.0",
  "pytz>=2025.2,<2026.0",
  "regex>=2025.10.23,<2026.0",
  "scipy>=1.16.2,<2.0",
  "six>=1.17.0,<2.0",
  "scikit-learn>=1.7.2,<2.0",
  "tqdm>=4.67.1,<5.0",
  "tzdata>=2025.2,<2026.0",
  "wheel>=0.45.1,<1.0",
]

[project.urls]
Homepage = "https://github.com/VaidehaSathe/SoftwareEngineeringProject2025"

# Expose a console entry point so pip-install provides a `project-recommender` CLI
[project.scripts]
project-recommender = "project_recommender.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
